# vision-language-navigator

./: .gitignore  README.md  TEST_SERVICE.md  requirements.txt  test_parse_service.py
docs/: PHASE1_SETUP.md
screenshots/: README.md
src/tb4_gz_rqt_launch/: BLOCK2_TESTING.md  README.md  README_COMMAND_PARSER.md  README_VISION_DETECTOR.md  VISION_TEST_COMMANDS.sh  ollama_user_input.py  ollama_user_input_no_eg.py  package.xml  setup.cfg  setup.py
src/tb4_gz_rqt_launch/launch/: tb4_gz_rqt_launch.launch.py
src/tb4_gz_rqt_launch/srv/: ParseCommand.srv
src/tb4_gz_rqt_launch/tb4_gz_rqt_launch/: __init__.py  command_parser_node.py  ollama_test.py  set_initial_pose_node.py  test_vision_detector.py  vision_detector_node.py
src/tb4_interfaces/: CMakeLists.txt  package.xml
worlds/: README.md  spawn_missing_models.sh  warehouse.sdf
