<?xml version="1.0"?>
<package format="3">
  <name>tb4_interfaces</name>
  <version>0.0.0</version>
  <description>Custom ROS 2 message and service interfaces for TurtleBot4 LLM navigation</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
